@@ -1,3 +1,8 @@
+2003-12-23  Itamar Shtull-Trauring  <itamar@itamarst.org>
+
+	* twisted/web/client.py: if Host header is passed, use that
+	instead of extracting from request URL.
+
 2003-12-14  Dave Peticolas  <dave@krondo.com>
 
 	* twisted/test/test_enterprise.py: Frederico Di Gregorio's patch
